fix(header): change the z-index value

--- a/frontend/ibudget/src/app/header/header.scss
+++ b/frontend/ibudget/src/app/header/header.scss
@@ -16,7 +16,7 @@ $card-drop-shadow: #00000040;
   border-bottom: $border-color 1px solid;
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 999;
 }
 
 .menu-toggle {
